--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
 	</repositories>
 
 	<dependencies>
+
+ 		<dependency>
+ 			<groupId>junit</groupId>
+ 			<artifactId>junit</artifactId>
+ 			<version>4.13.2</version>
+ 		</dependency>
+
 		<!-- JETT -->
  		<dependency>
  			<groupId>net.sf.jett</groupId>
