--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<inherited>true</inherited>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
+					<useIncrementalCompilation>true</useIncrementalCompilation>
+					<showWarnings>true</showWarnings>
+					<showDeprecation>true</showDeprecation>
+					<compilerArgs>
+						<arg>-Xlint:unchecked</arg>
+						<arg>-parameters</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -44,7 +49,7 @@
  		<dependency>
  			<groupId>net.sf.jett</groupId>
  			<artifactId>jett-core</artifactId>
- 			<version>0.10.0</version>
+ 			<version>0.11.0</version>
  		</dependency>
  	</dependencies>
 
